# character-generation-api

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  client_req.txt  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  CLAUDE.md
scripts/: CLAUDE.md  runpod_setup.md  setup_pod.sh  test_connection.py
src/: CLAUDE.md  main.py
src/api/routes/: CLAUDE.md  characters.py  generation.py  health.py
src/core/: CLAUDE.md  config.py  database.py
src/models/: CLAUDE.md  __init__.py  character.py  generation.py
src/schemas/: CLAUDE.md  __init__.py  character.py  generation.py
src/services/comfyui/: CLAUDE.md  client.py  image_generator.py  video_generator.py
src/services/runpod/: CLAUDE.md  pod_manager.py
src/services/storage/: CLAUDE.md  base.py  local_provider.py  manager.py  s3_provider.py  supabase_provider.py
src/services/training/: CLAUDE.md  lora_trainer.py
tests/: CLAUDE.md  conftest.py
tests/unit/: CLAUDE.md  test_characters.py  test_generation.py  test_health.py  test_lora_trainer.py  test_runpod.py  test_storage.py
workflows/: CLAUDE.md  sdxl_lora_image.json  svd_video.json
