[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "character-gen-api"
version = "0.1.0"
description = "Backend API for AI character image and video generation with LoRA-based character system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "websockets>=12.0",
    "boto3>=1.34.0",
    "supabase>=2.3.0",
    "aiofiles>=23.2.0",
    "pillow>=10.2.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-aiofiles>=23.2.0",
    "types-pillow>=10.2.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
